--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="./index.html" title="">
-          <img src="./assets/images/mashup-icon.svg" class="navbar-logo-img" alt="">
+          <img src="./assets/images/purple_logo.png" class="navbar-logo-img" alt="">
           Purple Folder Services
         </a>
       </div>
 
-      <div class="collapse navbar-collapse" id="navbar-collapse">
+      <!-- <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="">Home</a></li>
           <li><a href="./project.html" title="">Project</a></li>
@@ -51,7 +51,7 @@
           </li>
 
         </ul>
-      </div> 
+      </div>  -->
     </div>
   </nav>
 </header>
@@ -234,6 +234,7 @@
       <table class="table table-bordered">
         <tr><td><h2>Property Data Engine (UK)</h2></td><td><h3>Premier Insurance Co.(Nepal) Ltd</h3></td></tr>
         <tr><td><h3>3d Stories Game Studios</h3></td><td><h2>TechAxis, Lalitpur (Nepal)</h2></td></tr>
+        <tr><td><h4>TechGravity (US)</h4></td><td><h3>Digi Solutions (Aus)</h3></td></tr>
         <tr><td><h4>Optimal Living Daily LLC (US)</h4></td><td><h4>QBMetrics, New York</h4></td></tr>
         <tr><td><h3>Funky Squid Games (Aus)</h3></td><td><h3>You?? :)</h3></td></tr>
       </table>
@@ -284,6 +285,12 @@
                         <span class="fa-icon">
                           <i class="fa fa-phone" aria-hidden="true"></i>
                         </span>
+                        info@purplefolder.com.np
+                      </li>
+                      <li>
+                        <span class="fa-icon">
+                          <i class="fa fa-phone" aria-hidden="true"></i>
+                        </span>
                         +977 9849948051
                       </li>
                       <li>
@@ -326,13 +333,13 @@
           </div>
           <div class="col-xs-12 col-sm-5">
             <p class="text-right">
-              <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+              <a href="https://www.facebook.com/purplefolder/" class="social-round-icon white-round-icon fa-icon" title="" target="_blank">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </a>
-              <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+              <a href="https://twitter.com/purple_folder" class="social-round-icon white-round-icon fa-icon" title="" target="_blank">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
+              <a href="https://www.linkedin.com/in/purplefolder" class="social-round-icon white-round-icon fa-icon" title="" target="_blank">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
               </a>
             </p>
