--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width,initial-scale=1" name="viewport">
+  <!-- <meta http-equiv="refresh" content="1" > -->
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
   <meta content="Purple Folder Services Nepal" name="Purple Folder">
@@ -21,7 +22,9 @@
 
   <title>Purple Folder Services Nepal</title>
 
-<link href="./main.550dcf66.css" rel="stylesheet"></head>
+<link href="./main.550dcf66.css" rel="stylesheet">
+<script type="text/javascript">!function(t,e){"use strict";var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0],a=e.createElement("script");a.setAttribute("type","text/javascript"),a.setAttribute("src",t),r.appendChild(a)}catch(t){}};t.CollectId = "5b27092df24153360d3c3fc3",r("https://collectcdn.com/launcher.js")}(window,document);</script>
+</head>
 
 <body> <!-- Add your content of header -->
 <header>
@@ -117,9 +120,9 @@
                           <p>
                             Quisque tempor, ligula pharetra luctus elementum, arcu nisl suscipit ante, pharetra commodo dui est et enim. Sed eu vestibulum elit. Donec ut libero non.
                           </p>
-                          <a href="./project.html" class="btn btn-primary" title="">
+                          <!-- <a href="./project.html" class="btn btn-primary" title="">
                             Discover
-                          </a>
+                          </a> -->
                         </div>
                     </div>
                     <div class="item">
@@ -144,9 +147,9 @@
                           <p>
                             Quisque tempor, ligula pharetra luctus elementum, arcu nisl suscipit ante, pharetra commodo dui est et enim. Sed eu vestibulum elit. Donec ut libero non.
                           </p>
-                          <a href="./project.html" class="btn btn-primary" title="">
+                          <!-- <a href="./project.html" class="btn btn-primary" title="">
                             Discover
-                          </a>
+                          </a> -->
                         </div>
                     </div>
                 </div>
@@ -192,13 +195,13 @@
           <h4>Premier Insurance Co.(Nepal) Ltd</h4>
           <p>I highly recommend both working and partnership with Purple Folder Team, if you're serious about getting your projects done. Here you'll find an inspiring project engineering and a top domain expert team, which will surely help you skyrocket your business.</p>
           <p>
-            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.facebook.com/rajesh.shrestha.3576224" class="social-round-icon fa-icon" title="">
               <i class="fa fa-facebook" aria-hidden="true"></i>
             </a>
-            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://twitter.com/e14d90e98997411" class="social-round-icon fa-icon" title="">
               <i class="fa fa-twitter" aria-hidden="true"></i>
             </a>
-            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+            <a href="https://www.linkedin.com/in/rajesh-shrestha-00745465/" class="social-round-icon fa-icon" title="">
               <i class="fa fa-linkedin" aria-hidden="true"></i>
             </a>
           </p>
@@ -223,6 +226,119 @@
     </div>
   </div>
 
+  <!-- <div class="section-container">
+    <div class="container text-center">
+      <div class="row section-container-spacer">
+        <div class="col-xs-12 col-md-12">
+          <h2>Our Team</h2>
+          <p>No individual can win a game by himself.<br>― Pele, Brazil.</p>
+        </div>  
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Nabin Khadka</h3>
+          <h4>Founder and Software Engineer</h4>
+          <p>
+            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+       
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Suraj Pandey</h3>
+          <h4>Founder and Software Engineer</h4>
+          <p>
+            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Sudeep Adhikari</h3>
+          <h4>Web App Developer</h4>
+          <p>
+            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Nabin Khadka</h3>
+          <h4>Founder and Software Engineer</h4>
+          <p>
+            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+       
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Suraj Pandey</h3>
+          <h4>Founder and Software Engineer</h4>
+          <p>
+            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+        <div class="col-xs-12 col-md-4">
+          <img src="./assets/images/profil-01.jpg" alt="" class="reveal img-responsive reveal-content image-center">
+          <h3>Sudeep Adhikari</h3>
+          <h4>Web App Developer</h4>
+          <p>
+            <a href="https://facebook.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://twitter.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.linkedin.com/" class="social-round-icon fa-icon" title="">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+ -->
   <div class="section-container">
     <div class="container text-center">
       <div class="row section-container-spacer">
@@ -267,7 +383,7 @@
             <div class="card card-shadow col-xs-10 col-xs-offset-1 col-md-8 col-md-offset-2 reveal">
               <form action="" class="reveal-content">
                 <div class="row">
-                  <div class="col-md-7">
+                  <!-- <div class="col-md-7">
                     <div class="form-group">
                       <input type="email" class="form-control" id="email" placeholder="Email">
                     </div>
@@ -278,7 +394,7 @@
                       <textarea class="form-control" rows="3" placeholder="Enter your message"></textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send message</button>
-                  </div>
+                  </div> -->
                   <div class="col-md-5">
                     <ul class="list-unstyled address-container">
                       <li>
