Include live chat as well

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <link href="./main.550dcf66.css" rel="stylesheet">
 <script type="text/javascript">!function(t,e){"use strict";var r=function(t){try{var r=e.head||e.getElementsByTagName("head")[0],a=e.createElement("script");a.setAttribute("type","text/javascript"),a.setAttribute("src",t),r.appendChild(a)}catch(t){}};t.CollectId = "5b27092df24153360d3c3fc3",r("https://collectcdn.com/launcher.js")}(window,document);</script>
+
 </head>
 
 <body> <!-- Add your content of header -->
@@ -489,6 +490,18 @@
   ga('send', 'pageview');
 </script>
 
---> <script type="text/javascript" src="./main.0cf8b554.js"></script></body>
+--> <script type="text/javascript" src="./main.0cf8b554.js"></script><!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5b27b68c61a2e64e5fb59208/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script--></body>
 
 </html>
