Include web counter

--- a/index.html
+++ b/index.html
@@ -457,6 +457,10 @@
           <div class="col-xs-12 col-sm-7">
             <p><small>Quality and timely delivery is our goal.</small>
             </p>
+            <!-- Start of CuterCounter Code -->
+            <p style="visibility: hidden"><a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=13626&nd=6&style=27" border="0" alt="free counter"></a>
+            <!-- End of CuterCounter Code -->
+            </p>
           </div>
           <div class="col-xs-12 col-sm-5">
             <p class="text-right">
