--- a/index.html
+++ b/index.html
@@ -344,27 +344,27 @@
       </div>
       <div class="row">
         <p>
-        <a href="" class="btn btn-primary btn-sm">Node.js</a>
-        <a href="" class="btn btn-primary btn-sm">Django</a>
-        <a href="" class="btn btn-primary btn-sm">Flask</a>
-        <a href="" class="btn btn-primary btn-sm">HTML/CSS</a>
-        <a href="" class="btn btn-primary btn-sm">Javascript</a>
+        <a href="#" class="btn btn-primary btn-sm">Node.js</a>
+        <a href="#" class="btn btn-primary btn-sm">Django</a>
+        <a href="#" class="btn btn-primary btn-sm">Flask</a>
+        <a href="#" class="btn btn-primary btn-sm">HTML/CSS</a>
+        <a href="#" class="btn btn-primary btn-sm">Javascript</a>
         </p>
         <p>
-        <a href="" class="btn btn-primary btn-sm">Web Applications</a>
-        <a href="" class="btn btn-primary btn-sm">Amazon Services</a>
-        <a href="" class="btn btn-primary btn-sm">Google Cloud Services</a>
-        <a href="" class="btn btn-primary btn-sm">Docker</a>
-        <a href="" class="btn btn-primary btn-sm">Airflow</a>
+        <a href="#" class="btn btn-primary btn-sm">Web Applications</a>
+        <a href="#" class="btn btn-primary btn-sm">Amazon Services</a>
+        <a href="#" class="btn btn-primary btn-sm">Google Cloud Services</a>
+        <a href="#" class="btn btn-primary btn-sm">Docker</a>
+        <a href="#" class="btn btn-primary btn-sm">Airflow</a>
         </p>
         <p>
-        <a href="" class="btn btn-primary btn-sm">MongDB</a>
-        <a href="" class="btn btn-primary btn-sm">MySQL</a>
-        <a href="" class="btn btn-primary btn-sm">Redis</a>
-        <a href="" class="btn btn-primary btn-sm">Pandas</a>
-        <a href="" class="btn btn-primary btn-sm">Numpy</a>
-        <a href="" class="btn btn-primary btn-sm">PostgreSQL</a>
-        <a href="" class="btn btn-primary btn-sm">Data Science</a>
+        <a href="#" class="btn btn-primary btn-sm">MongDB</a>
+        <a href="#" class="btn btn-primary btn-sm">MySQL</a>
+        <a href="#" class="btn btn-primary btn-sm">Redis</a>
+        <a href="#" class="btn btn-primary btn-sm">Pandas</a>
+        <a href="#" class="btn btn-primary btn-sm">Numpy</a>
+        <a href="#" class="btn btn-primary btn-sm">PostgreSQL</a>
+        <a href="#" class="btn btn-primary btn-sm">Data Science</a>
         </p>
         <p>
         <a href="" class="btn btn-primary btn-sm">Scrapy</a>
