--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </a>
       </div>
 
-      <!-- <div class="collapse navbar-collapse" id="navbar-collapse">
+      <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./index.html" title="">Home</a></li>
-          <li><a href="./project.html" title="">Project</a></li>
+          <li><a href="purplefolder.com.np" title="">Home</a></li>
+          <li><a href="carreer" title="">Carreer</a></li>
           <li>
             <p>
               <a href="./components.html" class="btn btn-default navbar-btn" title="">Components</a>
@@ -63,7 +63,7 @@
           </li>
 
         </ul>
-      </div>  -->
+      </div>
     </div>
   </nav>
 </header>
