--- a/carreer.html
+++ b/carreer.html
@@ -46,7 +46,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./index.html" title="">
+        <a class="navbar-brand" href="purplefolder.com.np" title="">
           <img src="./assets/images/purple_logo.png" class="navbar-logo-img" alt="">
           Purple Folder Services
         </a>
@@ -74,10 +74,10 @@
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
-            <h2>About Us</h2>
-            <p>We are team of Computer Engineers who have been working since 2014 in the field of web applications and other backend development.
+            <h2>Currently</h2>
+            <p>We are looking for a python developer who has knowledge on linux. More importantly the individual needs to have passion on learning new things on every project.
             <br>
-            We have been outsourcing through freelancing platforms to international clients.</p>
+            We are here to work and learn together. Drop your message at info@purplefolder.com.np</p>
           </div>
        </div>
       </div>
