--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="purplefolder.com.np" title="">
+        <a class="navbar-brand" href="/" title="">
           <img src="./assets/images/purple_logo.png" class="navbar-logo-img" alt="">
           Purple Folder Services
         </a>
