--- a/carreer.html
+++ b/carreer.html
@@ -75,7 +75,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
             <h2>Currently</h2>
-            <p>We are looking for a python developer who has knowledge on linux. More importantly the individual needs to have passion on learning new things on every project.
+            <p>We are looking for a junior level python developer who can work on linux systems. More importantly the individual needs to have passion on learning new things on every project.
             <br>
             We are here to work and learn together. Drop your message at info@purplefolder.com.np</p>
           </div>
