--- a/carreer.html
+++ b/carreer.html
@@ -78,28 +78,23 @@
             <p>We are looking for a <strong>junior level python developer</strong> who can work on linux systems. More importantly the individual needs to have passion on learning new things on every project.
             <br>
             We are here to work and learn together. Drop your message at info@purplefolder.com.np</p>
-            <ol>
-              <li> Basic knowledge on python (at least a project done using python) </li>
-              <li> Basic knowledge on Linux systems (should be able to use Ubuntu)</li>
-              <li> Honest and hardworking person</li>
-              <li> Fourth year students also welcomed5. Should work for at least a year</li>
-            </ol>
+            <h3>We expect</h3>
+              Basic knowledge on python (at least a project done using python)
+              Basic knowledge on Linux systems (should be able to use Ubuntu)
+              Honest and hardworking person
+              Fourth year students also welcomed5. Should work for at least a year
+            
+            <h3>Job description</h3>
+              Work only 4 hours a day (No less than that; No need to work if candidate has urgent work in some cases). Candidate is expected to work on weekends.
+              Morning, Evening or Day (Which ever is feasible for the candidate)
+              Work from home
+              Communicate more often through slack
 
-           Job description:
-           </ol>
-              <li> Work only 4 hours a day (No less than that; No need to work if candidate has urgent work in some cases). Candidate is expected to work on weekends.</li>
-              <li> Morning, Evening or Day (Which ever is feasible for the candidate)</li>
-              <li> Work from home</li>
-              <li> Communicate more often through slack</li>
-           </ol>
-
-          Benefits:
-          <ol>
-            <li> Candidate will learn many technologies</li>
-            <li> Leaves on exam time/other events</li>
-            <li> Monthly salary + Percentage of project income</li>
-            <li> If candidate is weak on some aspect, he/she will have environment to learn from others in the team</li>
-          </ol>
+            <h3>Benefits:</h3>
+            Candidate will learn many technologies
+            Leaves on exam time/other events
+            Monthly salary + Percentage of project income
+            <If candidate is weak on some aspect, he/she will have environment to learn from others in the team
           </div>
        </div>
       </div>
