--- a/carreer.html
+++ b/carreer.html
@@ -79,10 +79,11 @@
             <br>
             We are here to work and learn together. Drop your message at info@purplefolder.com.np</p>
             <h3>We expect</h3>
-              Basic knowledge on python (at least a project done using python)
-              Basic knowledge on Linux systems (should be able to use Ubuntu)
-              Honest and hardworking person
-              Fourth year students also welcomed5. Should work for at least a year
+              Basic knowledge on python (at least a project done using python)<br>
+              Basic knowledge on Linux systems (should be able to use Ubuntu)<br>
+              Honest and hardworking person<br>
+              Fourth year students also welcomed<br>
+              Should work for at least a year<br>
             
             <h3>Job description</h3>
               Work only 4 hours a day (No less than that; No need to work if candidate has urgent work in some cases). Candidate is expected to work on weekends.
