--- a/carreer.html
+++ b/carreer.html
@@ -86,16 +86,16 @@
               Should work for at least a year<br>
             
             <h3>Job description</h3>
-              Work only 4 hours a day (No less than that; No need to work if candidate has urgent work in some cases). Candidate is expected to work on weekends.
-              Morning, Evening or Day (Which ever is feasible for the candidate)
-              Work from home
-              Communicate more often through slack
+              Work only 4 hours a day (No less than that; No need to work if candidate has urgent work in some cases). Candidate is expected to work on weekends.<br>
+              Morning, Evening or Day (Which ever is feasible for the candidate)<br>
+              Work from home<br>
+              Communicate more often through slack<br>
 
             <h3>Benefits:</h3>
-            Candidate will learn many technologies
-            Leaves on exam time/other events
-            Monthly salary + Percentage of project income
-            <If candidate is weak on some aspect, he/she will have environment to learn from others in the team
+            Candidate will learn many technologies<br>
+            Leaves on exam time/other events<br>
+            Monthly salary + Percentage of project income<br>
+            If candidate is weak on some aspect, he/she will have environment to learn from others in the team<br>
           </div>
        </div>
       </div>
