--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="purplefolder.com.np" title="">Home</a></li>
+          <li><a href="/" title="">Home</a></li>
           <li><a href="carreer" title="">Carreer</a></li>
           <!-- <li>
             <p>
