--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121918515-1"></script>
+<meta name="google-site-verification" content="oTAIqJvYGLVzAVo1DFmHqZy8smFkO8GKsOc1M4TT8_U" />
 <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
